--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.84.0",
     "lucide-react": "^0.553.0",
     "next": "^14.2.33",
     "react": "^18",
