--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "lucide-react": "^0.553.0",
     "next": "^14.2.33",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "supabase": "^2.63.1"
   },
   "devDependencies": {
     "@types/node": "^20",
